# mlb-client-mobile

./: .clang-format  .gitignore  .nvimrc  CMakeLists.txt  android_env.sh  dummydata.qrc  mobile-client.pro
android/: AndroidManifest.xml
cmake/modules/: AddQtAndroidApk.cmake  qtdeploy.json.in
qml/: ArticlePage.qml  Base64Image.qml  BasePage.qml  CommonScrollableLeaguePage.qml  FullGalleryPage.qml  GalleryPage.qml  GalleryPageDelegate.qml  ImageView.qml  LeagueStandingDelegate.qml  LeagueStandingOneEntryDelegate.qml  MainStackPage.qml  MaterialIcon.qml  SchedulePage.qml  SchedulePageDelegate.qml  SettingsPage.qml  SettingsPageMenuItem.qml  ShortArticlePage.qml  ShortArticleView.qml  ShortArticleViewDelegate.qml  SideMenu.qml  StandingsPage.qml  StandingsPageDelegate.qml  ThemedImage.qml  TopBar.qml  commonLogic.js  main.qml  qml.qrc  rest_controller.js  rest_controller.jsc
qml/articles/: CommentListView.qml
qml/dummydata/: DataModels.qml  FileIO.js  article10.json  article11.json  articlesDataAPI.qml  articlesList.json  gameData10.json  players.json  rest_controller.jsc  scheduleAPI.qml  scheduleExample.json  standings.json  standings.qml  teamDataAPI.qml  teamExample.json  teamsList.json
qml/gallery/: GalleryPage.qml
qml/game/: GameHeader.qml  GamePage.qml  HeaderLabel.qml  OneTeamPage.qml  PlayerEntryDelegate.qml
qml/players/: PlayersPage.qml
qml/schedule/: BasicSchedule.qml  GameDelegate.qml  MajorSchedule.qml  ScheduleBase.qml  SchedulePage.qml  SchedulePageDelegate.qml  WeekLabelDelegate.qml
qml/settings/: SelectTeamSettingsMenuItem.qml  SettingsPage.qml  SettingsPageMenuItem.qml
qml/standings/: LeagueStandingDelegate.qml  LeagueStandingOneEntryDelegate.qml  StandingsPage.qml  logic.js  logic.jsc
qml/teams/: TeamPage.qml  TeamPlayerDelegate.qml  TeamsPage.qml  TeamsPageDelegate.qml
scripts/: build_apk_armv7.sh
src/: apibase.cpp  apibase.h  articles.cpp  articles.h  datacontroller.cpp  datacontroller.h  main.cpp  playersapi.cpp  playersapi.h  scheduleapi.cpp  scheduleapi.h  standings.cpp  standings.h  standingslistitem.cpp  standingslistitem.h  teamapi.cpp  teamapi.h
